# food_solver

./: .gitignore  Justfile  pyproject.toml
.helix/: languages.toml
foods/: BAICAI.json  BANANA.json  BASA_FISH.json  BEEF.json  BEEN_SPROUT.json  BELL_PEPER.json  BOCAI.json  BOKCHOY.json  BROCCOLI.json  BROCOLLI.json  CABBAGE.json  CANOLA_OIL.json  CARROT.json  CELERY.json  CHICKEN_BREAST.json  CHICKEN_BREAST1.json  CHICKEN_HEART.json  CHICKEN_THIGH.json  CHINESE_LETTUS.json  CUCUMBER.json  EGG.json  EGGPLANT.json  JIANGDOU.json  LETTUS.json  LUOBO.json  OYSTER.json  PORK.json  PORK_FAT.json  PORK_HEART.json  PORK_INTESTINE.json  PORK_LIVER.json  PORK_TONGUE.json  POTATO.json  PUMPKIN.json  RICE.json  SALT.json  SHANYAO.json  SIGUA.json  SOYBEAN.json  SOYBEAN_GREEN.json  (+7 more)
src/: __main__.py  food.py  needs.py  nutrient.py  recipe.py  units.py
src/food_getters/: chinanutri.py  usda.py
