[tool.poetry]
name = "food-solver"
version = "0.1.0"
description = ""
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4= "^4"
humanize = "^4.9.0"
click = "^8.1.7"
cvxopt = "^1.3.2"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.365"
ruff = "^0.4.7"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
