[project]
name = "food-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4",
    "humanize>=4.9.0",
    "click>=8.1.7",
    "cvxopt>=1.3.2",
    "numpy>=2.0.0",
    "ruff>=0.0.53",
]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
